--- a/Musica/index.html
+++ b/Musica/index.html
@@ -93,19 +93,19 @@
           </div>
         </div>
         <div class="row">
-          <button type="button" name="button" class="btn btn-primary btn-side">holi</button>
+          <button type="button" name="button" class="btn btn-primary btn-side">Alternative metal</button>
         </div>
         <div class="row">
-          <button type="button" name="button" class="btn btn-primary btn-side">holi</button>
+          <button type="button" name="button" class="btn btn-primary btn-side">Black metal</button>
         </div>
         <div class="row">
-          <button type="button" name="button" class="btn btn-primary btn-side">holi</button>
+          <button type="button" name="button" class="btn btn-primary btn-side">Death metal</button>
         </div>
         <div class="row">
-          <button type="button" name="button" class="btn btn-primary btn-side">holi</button>
+          <button type="button" name="button" class="btn btn-primary btn-side">Doom metal</button>
         </div>
         <div class="row">
-          <button type="button" name="button" class="btn btn-primary btn-side">holi</button>
+          <button type="button" name="button" class="btn btn-primary btn-side">Power metal</button>
         </div>
 
       </div>
